tests/js/valid/when/definitions.buri
Color = #red | #green | #blue

@export
colorToString = (color: Color) =>
    when color is
        #red do "red"
        #green do "green"
        #blue do "blue"

Rgb = #rgb(Int, Int, Int)

@export
getRedComponent = (color: Rgb) =>
    when color is
        #rgb(r, g, b) do r