tests/js/invalid/when/mismatched-types-4.buri
result = when #rgb(0, 0, 0) is
    #rgb(red, green, blue) do red == "0"